--- a/index.html
+++ b/index.html
@@ -33,35 +33,35 @@
         <!-- Images with Captions Organism -->
         <section class="gallery">
             <figure>
-                <img src="images/image1.jpg.jpg" alt="Juan with our 1st heeler">
+                <img src="image1.jpg.jpg" alt="Juan with our 1st heeler">
                 <figcaption>Juan and Keylor</figcaption>
             </figure>
             <figure>
-                <img src="images/image2.jpg.jpg" alt="Juan with our 2nd heeler">
+                <img src="image2.jpg.jpg" alt="Juan with our 2nd heeler">
                 <figcaption>Juan and Phoenix</figcaption>
             </figure>
             <figure>
-                <img src="images/image3.jpg.jpg" alt="Juan with family dog">
+                <img src="image3.jpg.jpg" alt="Juan with family dog">
                 <figcaption>Juan and Peanut</figcaption>
             </figure>
             <figure>
-                <img src="images/image4.jpg.jpg" alt="Juan competing in Nicaragua">
+                <img src="image4.jpg.jpg" alt="Juan competing in Nicaragua">
                 <figcaption>Juegos Managua Nicaragua </figcaption>
             </figure>
             <figure>
-                <img src="images/image5.jpg.jpg" alt="Juan's Team at Nationals ">
+                <img src="image5.jpg.jpg" alt="Juan's Team at Nationals ">
                 <figcaption>El Salvador's National Wrestling Team</figcaption>
             </figure>
             <figure>
-                <img src="images/image6.jpg.jpg" alt="Winning 1st place">
+                <img src="image6.jpg.jpg" alt="Winning 1st place">
                 <figcaption>Juegos Codicader</figcaption>
             </figure>
             <figure>
-                <img src="images/image7.jpg.jpg" alt="Present Day with Coach in DC">
+                <img src="image7.jpg.jpg" alt="Present Day with Coach in DC">
                 <figcaption>Juan and Coach Alexander Molina</figcaption>
             </figure>
             <figure>
-                <img src="images/image8.jpg.jpg" alt="Taking photos at the WW2 memorial">
+                <img src="image8.jpg.jpg" alt="Taking photos at the WW2 memorial">
                 <figcaption>Photography</figcaption>
             </figure>
         </section>
