--- a/index.html
+++ b/index.html
@@ -20,42 +20,40 @@
     <main>
         <section>
             <h2>About Juan</h2>
-            <p>Juan Jose Marquez was born in San Miguel, El Salvador in 1995. Juan, a passionate and determined young wrestler, grew up in the vibrant landscapes of El Salvador. From an early age, he was captivated by the energy and excitement of wrestling matches he watched in his community. Inspired by these athletes, Juan began his own wrestling journey at just thirteen years old, training tirelessly to master the craft.</p>
-            <p>Despite the challenges of limited resources in his community, Juan demonstrated an unmatched dedication and commitment to his dream. With the support of his family and mentors, Juan made his hometown wrestling team and competed nationally. He balanced his education with grueling training sessions. At the age of fourteen, he was given a scholarship to compete and live in San Salvador for El Salvador's National Team. Every evening after school, he would train at the Magico Gonzalez stadium with the best wrestlers in El Salvador.</p>
-            <p>In 2010, the El Salvadoran National Wrestling team traveled to Managua, Nicaragua to compete in Juegos Codicader. Juan’s first match was against Guatemala, Nicaragua, and Panama, winning second place in the Juegos Codicader. After these games, the team went to Cuba to train for the next Juegos Codicader, hosted in El Salvador in 2011. Juan’s wrestling journey became more than just a personal pursuit; it turned into a way to inspire others in his community. Today, Juan has the same passion and drive for wrestling and has discovered new passions: photography and training his dogs.</p>
+            <p>Juan Jose Marquez was born in San Miguel, El Salvador in 1995.... (rest of your about text) </p>
         </section>
 
         <section class="gallery">
             <figure>
-                <img src="images/image1.jpg" alt="Juan with our 1st heeler">
+                <img src="image1.jpg" alt="Juan with our 1st heeler">
                 <figcaption>Juan and Keylor</figcaption>
             </figure>
             <figure>
-                <img src="images/image2.jpg" alt="Juan with our 2nd heeler">
+                <img src="image2.jpg" alt="Juan with our 2nd heeler">
                 <figcaption>Juan and Phoenix</figcaption>
             </figure>
             <figure>
-                <img src="images/image3.jpg" alt="Juan with family dog">
+                <img src="image3.jpg" alt="Juan with family dog">
                 <figcaption>Juan and Peanut</figcaption>
             </figure>
             <figure>
-                <img src="images/image4.jpg" alt="Juan competing in Nicaragua">
+                <img src="image4.jpg" alt="Juan competing in Nicaragua">
                 <figcaption>Juegos Managua Nicaragua </figcaption>
             </figure>
             <figure>
-                <img src="images/image5.jpg" alt="Juan's Team at Nationals ">
+                <img src="image5.jpg" alt="Juan's Team at Nationals ">
                 <figcaption>El Salvador's National Wrestling Team</figcaption>
             </figure>
             <figure>
-                <img src="images/image6.jpg" alt="Winning 1st place">
+                <img src="image6.jpg" alt="Winning 1st place">
                 <figcaption>Juegos Codicader</figcaption>
             </figure>
             <figure>
-                <img src="images/image7.jpg" alt="Present Day with Coach in DC">
+                <img src="image7.jpg" alt="Present Day with Coach in DC">
                 <figcaption>Juan and Coach Alexander Molina</figcaption>
             </figure>
             <figure>
-                <img src="images/image8.jpg" alt="Taking photos at the WW2 memorial">
+                <img src="image8.jpg" alt="Taking photos at the WW2 memorial">
                 <figcaption>Photography</figcaption>
             </figure>
         </section>
