--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
                 <figcaption>Juan and Peanut</figcaption>
             </figure>
             <figure>
-                <img src="image4.jpg" alt="Juan competing in Nicaragua">
+                <img src="image4.JPG" alt="Juan competing in Nicaragua">
 
                 <figcaption>Juegos Managua Nicaragua </figcaption>
             </figure>
             <figure>
-                <img src="image5.jpg." alt="Juan's Team at Nationals ">
+                <img src="image5.JPG." alt="Juan's Team at Nationals ">
                 <figcaption>El Salvador's National Wrestling Team</figcaption>
             </figure>
             <figure>
-                <img src="image6.jpg." alt="Winning 1st place">
+                <img src="image6.JPG." alt="Winning 1st place">
                 <figcaption>Juegos Codicader</figcaption>
             </figure>
             <figure>
-                <img src="image7.jpg." alt="Present Day with Coach in DC">
+                <img src="image7.JPG." alt="Present Day with Coach in DC">
                 <figcaption>Juan and Coach Alexander Molina</figcaption>
             </figure>
             <figure>
