--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <figcaption>Juegos Managua Nicaragua </figcaption>
             </figure>
             <figure>
-                <img src="image5.JPG." alt="Juan's Team at Nationals ">
+                <img src="image5.JPG" alt="Juan's Team at Nationals ">
                 <figcaption>El Salvador's National Wrestling Team</figcaption>
             </figure>
             <figure>
