--- a/hobbies.html
+++ b/hobbies.html
@@ -37,22 +37,22 @@
     <h1>Juan's Hobbies</h1>
 
     <div class="hobby">
-        <img src="image1.jpg." alt="Juan with our 1st heeler">
+        <img src="image1.jpg" alt="Juan with our 1st heeler">
         <p>Juan got his first opportunity to train Keylor, a blue heeler and fell in love with training dogs.</p>
     </div>
 
     <div class="hobby">
-        <img src="image2.jpg." alt="Juan and Phoenix">
+        <img src="image2.jpg" alt="Juan and Phoenix">
         <p>Training his dogs has become a rewarding hobby that strengthens his bond with them.</p>
     </div>
 
     <div class="hobby">
-        <img src="image3.jpg." alt="Juan and Peanut">
+        <img src="image3.jpg" alt="Juan and Peanut">
         <p>Juan has even trained extended family members dogs.</p>
     </div>
 
     <d class="hobby">
-        <img src="image8.jpg." alt="Taking Photos of WW2 Memorial">
+        <img src="image8.jpg" alt="Taking Photos of WW2 Memorial">
         <p>Photography has brought Juan a new type of challenge and excitement.</p>
     </div>
 
